Manifests/Ingresses/chat-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-ingress
  namespace: chat
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: trascendence.42firenze.it
    http:
      paths:
      - path: /api/chat/
        pathType: Prefix
        backend:
          service:
            name: chat-service
            port:
              number: 8000
  tls:
  - hosts:
    - trascendence.42firenze.it
    secretName: nginx-tls
