Manifests/Ingresses/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trascendence-ingress
  namespace: front-end-namespace
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
#    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: trascendence.42firenze.it
    http:
      paths:
      - path:  /
        pathType: Prefix
        backend:
          service:
            name: front-end-service
            port:
              number: 3000
  tls:
  - hosts:
    - trascendence.42firenze.it
    secretName: nginx-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cm-acme-http-solver
  namespace: front-end-namespace
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: trascendence.42firenze.it
    http:
      paths:
      - path: /.well-known/acme-challenge/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: cm-acme-http-solver
            port:
              number: 8089
