Manifests/Ingresses/login-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: login-ingress
  namespace: login
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: trascendence.42firenze.it
    http:
      paths:
      - path: /api/login(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: login-service
            port:
              number: 8000
  tls:
  - hosts:
    - trascendence.42firenze.it
    secretName: nginx-tls
