Manifests/Ingresses/minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: minio
  annotations:
    nginx.ingress.kubernetes.io/limit-whitelist: "GET"
    # JWT validation
    nginx.ingress.kubernetes.io/auth-url: "http://jwt-validator-service.minio.svc.cluster.local:8000/validate-jwt/"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-User-ID"
    # CORS
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://trascendence.42firenze.it"
    # methods and headers
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization"
    nginx.ingress.kubernetes.io/proxy-body-size: "1k" # 1k so you can't upload photos
spec:
  ingressClassName: nginx
  rules:
  - host: minio.trascendence.42firenze.it
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-service
            port:
              number: 9000
  tls:
  - hosts:
    - minio.trascendence.42firenze.it
    secretName: minio-tls
