Manifests/Ingresses/notification-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notifications-ingress
  namespace: notifications
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    
    # WebSocket
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/websocket-services: "notifications-service"
    nginx.ingress.kubernetes.io/connection-proxy-header: "upgrade"

spec:
  ingressClassName: nginx
  rules:
  - host: trascendence.42firenze.it
    http:
      paths:
      - path: /api/notifications(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: notifications-service
            port:
              number: 8000
  tls:
  - hosts:
    - trascendence.42firenze.it
    secretName: nginx-tls
