Manifests/Ingresses/user-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-ingress
  namespace: user
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: trascendence.42firenze.it
    http:
      paths:
      - path: /api/user/
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 8000
  tls:
  - hosts:
    - trascendence.42firenze.it
    secretName: nginx-tls
